# multi-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  init.sql  pyproject.toml
backend/: .env.example  alembic.ini  main.py  paddleocr_pageindex_pipeline.md  pyproject.toml  requirements.txt
file-service/: main.py  requirements.txt
frontend/: .env.example  (+2 more)
services/retrieval/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/retrieval/app/: worker.py
services/retrieval/app/config/: __init__.py  settings.py
services/retrieval/app/core/: __init__.py  milvus.py  minio_client.py  redis.py
services/retrieval/app/routes/: __init__.py  files.py  health.py  index.py  search.py
services/retrieval/app/schemas/: __init__.py  common.py  events.py  files.py  health.py  index.py  search.py
services/retrieval/app/services/: __init__.py  file_service.py  index_service.py  search_service.py
services/retrieval/app/services/extract/: __init__.py  base.py  chunker.py  docling.py  hybrid.py  paddleocr.py
services/retrieval/app/utils/: __init__.py  embeddings.py
services/sagent/: .env.example  Dockerfile  logging_config.py  main.py  pyproject.toml
services/sagent/agents/: __init__.py  mcp_manager.py  root.py
services/sagent/agents/common/: form_schemas.py
services/sagent/agents/mcp_agents/data_analyst/: __init__.py  agent.py  tools.py
services/sagent/agents/mcp_agents/gitlab/: agent.py  mcp.json  tools.py
services/sagent/agents/mcp_agents/redmine/: __init__.py  agent.py  client.py  tools.py
services/sagent/agents/mcp_agents/redmine/schema/: __init__.py  _registry.py  categories.py  create_issue.py  form.py  issues.py  log_time.py  members.py  projects.py  relations.py  search.py  time_entries.py  versions.py  watchers.py  wiki.py
services/sagent/agents/mcp_agents/search/: agent.py  tools.py
services/sagent/agents/rag/: __init__.py  agent.py
services/sagent/api/: __init__.py
services/sagent/api/routes/: __init__.py  agents.py  debug.py  events.py  health.py  internal.py  sessions.py  tools.py  upload.py
services/sagent/common/: __init__.py  constants.py
services/sagent/config/: __init__.py  settings.py
services/sagent/core/: __init__.py  database.py  dependencies.py  minio_artifact.py  queue.py
services/sagent/instructions/: __init__.py
services/sagent/instructions/prompts/: common.yml  data_analyst.yml  gitlab.yml  redmine.yml  root.yml  search.yml  team_knowledge.yml  titles.yml
services/sagent/models/: __init__.py  adk_session.py  base.py  feedback.py  oauth_connection.py  team_corpus.py  team_join_request.py  user_team.py
services/sagent/patches/: __init__.py  retry_genai.py
services/sagent/schemas/: __init__.py  agents.py  common.py  debug.py  health.py  internal.py  sessions.py  upload.py
services/sagent/services/: __init__.py  db.py  oauth.py  session_service.py  titles.py  upload_service.py
services/sagent/services/rag/: __init__.py  config.py  corpus_registry.py  sync.py  teams.py
services/sagent/tools/: __init__.py  confirm.py  files.py
services/sagent/utils/: __init__.py
(+438 files in other folders)
