[tool.poetry]
name = "fastmcp-chat"
version = "0.1.0"
description = "FastMCP server with LangGraph human-in-the-loop and CopilotKit integration"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
mcp = "^0.9.0"
langchain = "^0.1.0"
langchain-openai = "^0.0.5"
langgraph = "^0.0.20"
copilotkit = "^0.1.0"
sse-starlette = "^2.0.0"
python-multipart = "^0.0.6"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.26.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
